# NeuralRayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.md
include/: renderer.h  user_interface.h
src/: main.cu  renderer.cu  temp.cu  user_interface.cu
